--- a/mydiary/templates/mydiary/detail.html
+++ b/mydiary/templates/mydiary/detail.html
@@ -1,3 +1,7 @@
+{% load static %}
+{% extends  'mydiary/base.html' %}
+{% block content %}
+
 <h1>일기 내용 자세히 보기</h1>
 
 <div class="posts">
@@ -24,3 +28,5 @@
 <p>{{ comment.text|linebreaks }}</p>
 <a href="{% url 'delete_comment' pk=post.pk comment_pk=comment.pk%}">댓글삭제
 {% endfor %}
+
+{% endblock %}
