--- a/mydiary/templates/mydiary/home.html
+++ b/mydiary/templates/mydiary/home.html
@@ -1,3 +1,7 @@
+{% load static %}
+{% extends  'mydiary/base.html' %}
+{% block content %}
+
 <h1>아기사자의 다이어리입니다.</h1>
 
 <a href="{% url 'new' %}">일기 작성하기</a>
@@ -6,3 +10,5 @@
     <a href="{% url 'detail' pk=post.pk %}">{{ post.title }}</a>
     <hr>
 {% endfor %}
+
+{% endblock %}
