--- a/mydiary/templates/mydiary/home.html
+++ b/mydiary/templates/mydiary/home.html
@@ -1,8 +1,30 @@
-{% load static %}
 {% extends  'mydiary/base.html' %}
 {% block content %}
+{% load static %}
 
-<h1>아기사자의 다이어리입니다.</h1>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="{% static 'mydiary/img/babylion.jpg' %}" class="d-block w-100" alt="...">
+        <h1>아기사자의 다이어리입니다.</h1>
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'mydiary/img/coding.jpg' %}" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="{% static 'mydiary/img/cutelion.jpg' %}" class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
 
 <a href="{% url 'new' %}">일기 작성하기</a>
 <br>
