--- a/mydiary/static/mydiary/css/style.css
+++ b/mydiary/static/mydiary/css/style.css
@@ -1,3 +1,10 @@
+@font-face { font-family: 'Recipekorea'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff'); font-weight: normal; font-style: normal; }
+
+*{
+    font-family: 'Recipekorea', sans-serif;
+}
+
+
 button:focus{
     outline: none;
 }
@@ -24,7 +31,15 @@ button:focus{
 
 .home-caption-display{
     top: 37%;
+    color: white;
 }
+.home-caption-display h1{
+    font-size: 6em;
+}
+.home-caption-display p{
+    font-size: 2.5em;
+}
+
 
 .posting-header{
     padding: 120px 0;
@@ -32,11 +47,33 @@ button:focus{
 }
 
 .posting-en{
-    font-size: 1.3rem;
+    font-size: 1.2em;
     font-weight: 700;
-    line-height: 1.5;
+    line-height: 3;
 }
 .posting-h{
-    font-size: 2.5em;
+    font-size: 2.7em;
     line-height: 1.5;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .home-img-display{
+        height: 60vh;
+    }
+    .home-caption-display{
+        top: 20%;
+    }
+    .posting-header{
+        padding: 70px 0;
+    }
+    .home-caption-display h1{
+        font-size: 2.7em;
+    }
+    .home-caption-display p{
+        font-size: 1.6em;
+    }
+    .posting-h{
+        font-size: 2em;
+    }
+  }
