--- a/mydiary/templates/mydiary/base.html
+++ b/mydiary/templates/mydiary/base.html
@@ -12,23 +12,23 @@
     <body>
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">Likelion Sogang</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link px-4" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link px-4" href="#">HOME <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link px-4" href="#">Features</a>
+                      <a class="nav-link px-4" href="#">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link px-4" href="#">Pricing</a>
+                      <a class="nav-link px-4" href="#">CLUBS</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link px-4 disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                      <a class="nav-link px-4" href="#" >CONTACT</a>
                     </li>
                   </ul>
                 </div>
@@ -36,7 +36,6 @@
         </header>
         {% block content %}
         {% endblock %}
-
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
