--- a/mydiary/templates/mydiary/edit.html
+++ b/mydiary/templates/mydiary/edit.html
@@ -1,6 +1,6 @@
 {% extends  'mydiary/base.html' %}
 {% block content %}
-
+{% load static %}
 <h1>일기 수정하기</h1>
 
 <form method="POST" class="post-form">{% csrf_token %}
