--- a/mydiary/static/mydiary/css/style.css
+++ b/mydiary/static/mydiary/css/style.css
@@ -1,45 +1,40 @@
 @font-face { font-family: 'Recipekorea'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/Recipekorea.woff') format('woff'); font-weight: normal; font-style: normal; }
-
 *{
     font-family: 'Recipekorea', sans-serif;
 }
-
-
-button:focus{
-    outline: none;
-}
 .navbar-dark .navbar-toggler{
-    border: none;
+    border: none !important;
+}
+button:focus{
+    outline:none !important;
 }
 
 #home-img1{
- background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../img/coding.jpg);
-}
-#home-img2{
- background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../img/cutelion.jpg);
- background-position: center 20%;
-}
-#home-img3{
- background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../img/sglikelion.jpg);
-}
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../img/coding.jpg);
+   }
+   #home-img2{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../img/cutelion.jpg);
+    background-position: center 20%;
+   }
+   #home-img3{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(../img/sglikelion.jpg);
+   }
 .home-img-display{
     height: 90vh;
-    background-position: center center;
-    background-size: cover;
+    background-position:center center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
-
 .home-caption-display{
     top: 37%;
     color: white;
 }
 .home-caption-display h1{
-    font-size: 6em;
+    font-size: 4em;
 }
 .home-caption-display p{
     font-size: 2.5em;
 }
-
 
 .posting-header{
     padding: 120px 0;
@@ -56,24 +51,23 @@ button:focus{
     line-height: 1.5;
 }
 
-
 @media only screen and (max-width: 600px) {
     .home-img-display{
-        height: 60vh;
-    }
+       height: 60vh;
+   } 
     .home-caption-display{
-        top: 20%;
-    }
+       top: 20%;
+   } 
     .posting-header{
-        padding: 70px 0;
-    }
+       padding: 70px 0;
+   } 
     .home-caption-display h1{
-        font-size: 2.7em;
-    }
+       font-size: 2.7em;
+   } 
     .home-caption-display p{
-        font-size: 1.6em;
-    }
+       font-size: 1.6em;
+   } 
     .posting-h{
-        font-size: 2em;
-    }
-  }
+       font-size: 2em;
+   } 
+ }
