--- a/mydiary/templates/mydiary/new.html
+++ b/mydiary/templates/mydiary/new.html
@@ -1,6 +1,6 @@
 {% extends  'mydiary/base.html' %}
 {% block content %}
-
+{% load static %}
 <h1>새 일기를 쓰는 페이지입니다.</h1>
 
 <form method="POST" class="post-form">{% csrf_token %}
